Eliminated calls to persistent object.